# thaw

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  bench_slot_warm.py  bench_slot_warm_correctness.py  pyproject.toml  setup.sh  thaw-demo.cast  vercel.json
.github/: pull_request_template.md
.github/workflows/: build-native.yml  pages.yml  publish-vllm.yml  test.yml
benchmarks/: RUNBOOK.md  bench_mlx_load.py  bench_mlx_pool.py  bench_s3_batch.py  bench_s3_download.py  diagnose_mlx_load.py  drift_ablation.py  h100_stress_test_2026-04-14.json  micro_pipeline.py  replay_experiment.py  run_validation.py  validate_hotswap.py  verification_drift.py  verifier_headtohead.py  weight_hash.py
benchmarks/results/2026-06-10_drift_ablation/: grpo.json  k8.json  primary.json  screened.json  smoke.json  temp0.json
benchmarks/results/2026-06-11_pressure_test/: batchinv.json  k16.json  k8.json  phi.json  primary.json  screened.json
crates/thaw-cli/: Cargo.toml
crates/thaw-cli/src/: main.rs
crates/thaw-core/: Cargo.toml
crates/thaw-core/src/: header.rs  lib.rs  region.rs  snapshot.rs  writer.rs
crates/thaw-core/tests/: header_golden.rs  snapshot_file_roundtrip.rs  snapshot_golden.rs  writer_file_roundtrip.rs
crates/thaw-cuda-sys/: Cargo.toml  build.rs
crates/thaw-cuda-sys/src/: lib.rs
crates/thaw-py/: Cargo.toml  pyproject.toml
crates/thaw-py/src/: lib.rs
crates/thaw-runtime/: Cargo.toml
crates/thaw-runtime/src/: backend.rs  direct_io.rs  freeze.rs  lib.rs  mock.rs  pipeline.rs  real.rs  restore.rs
demos/: H100_RUNBOOK.md  _receipt.py  _trunk_padding.py  agent_fork.py  agentfs_demo_tree.py  baseline_naive_fork.py  bench_cold_cache.sh  build_rewind_cast.py  diagnose_throughput.py  evict_cache.py  fork_pool_rl.py  fork_smoke_test.py  parallel_agents.py  pr_review_langgraph.py  rewind_bestof8.py  rl_rollout_simulator.py  rl_training_step.py  run_quick_test.sh  run_stress_test.sh  setup_runpod.sh  sleep_mode_demo.py  stress_test.py  test_multi_gpu.py  thaw-rewind.cast
docs/: AGENTFS_VALIDATION.md  ARCHITECTURE.md  BENCHMARKS.md  ONBOARDING.md  REWIND_VALIDATION.md  SETUP.md  rewind-deep-dive.md
examples/pr-review-fanout/reviewer-security/: handle.json
examples/pr-review-fanout/reviewer-style/: handle.json
examples/pr-review-fanout/trunk/: handle.json
examples/rewind-bestof8/rollout-0/: rollout.json
examples/rewind-bestof8/rollout-1/: rollout.json
examples/rewind-bestof8/rollout-2/: rollout.json
examples/rewind-bestof8/rollout-3/: rollout.json
examples/rewind-bestof8/rollout-4/: rollout.json
examples/rewind-bestof8/rollout-5/: rollout.json
examples/rewind-bestof8/rollout-6/: rollout.json
examples/rewind-bestof8/rollout-7/: rollout.json
notebooks/: gpu_benchmark.ipynb  quickstart.ipynb
paper/refeed-drift/: .gitignore  PREREGISTRATION.md  figures.py  main.tex  refs.bib
python/: demo.py  kv_cache_demo.py  thaw_serve.py  ttft_demo.py  vllm_demo.py
python/thaw_common/: __init__.py  cloud.py  format.py  snapshot.py  telemetry.py  util.py
python/thaw_mlx/: __init__.py  pool.py  snapshot.py
python/thaw_sglang/: __init__.py  loader.py
python/thaw_vllm/: __init__.py  _fork_pool_worker.py  _pool_worker.py  agentfs.py  cli.py  fork.py  fork_pool.py  kv_snapshot.py  loader.py  pool.py  recorder.py  rewind.py  server.py  sleep_mode.py  snapshot.py
python/thaw_vllm/langgraph/: __init__.py  _message_utils.py  chat_model.py  coalescer.py
scripts/: demo.sh  extract_main_snowflake.py  pod-bench-freeze.sh  pod-validate-kv.sh  pod-validate-s3.sh
site/: CNAME  PRODUCT.md  _og.html  index.html  logo.html  next.config.ts  package-lock.json  package.json
site/app/: globals.css  layout.tsx  page.tsx
site/components/sections/: Agents.tsx  Hero.tsx  HeroBackdrop.tsx  HowItWorks.tsx  Install.tsx  Integrations.tsx  Primitive.tsx  Receipts.tsx  Vision.tsx
site/components/ui/: CopyChip.tsx  CountUp.tsx  Footer.tsx  ForkFlow3D.tsx  Logo.tsx  Marquee.tsx  Nav.tsx  Reveal.tsx  SectionEyebrow.tsx  SnowflakeChrome3D.tsx  dotted-surface.tsx
site/receipts/: 2026-04-20_a6000_fork_smoke_test.json  2026-04-20_h100_fork_pool_rl.json  2026-04-20_h100_fork_smoke_test.json  2026-04-20_h100_parallel_agents.json  2026-04-20_h100_rl_rollout.json  2026-04-21_h100_pr_review_langgraph.json  2026-04-23_ec2_s3_download.json  2026-04-27_m5pro_diagnose_llama_1b.json  2026-04-27_mlx_bench_mlx-community__Llama-3.2-1B-Instruct-4bit.json  2026-04-27_mlx_pool_mlx-community__Llama-3.2-1B-Instruct-4bit.json  2026-05-01_mlx_bench_mlx-community__EXAONE-4.0-32B-4bit.json  2026-05-01_mlx_bench_mlx-community__Llama-3.2-3B-Instruct-4bit.json  2026-06-12_a100_replay_e123.json  2026-06-17_h100x2_restore_audit.json  2026-06-24_s3_batch.json  2026-06-24_verification_drift.json  2026-06-25_h100_verifier_headtohead.json  2026-06-25_h100_verifier_headtohead_v2.json  README.md  index.json
site/receipts/2026-04-22_rfc/: sleep_mode_70b_tp2.json  sleep_mode_8b_tp1.json
tests/: conftest.py  test_agentfs.py  test_cloud.py  test_common_format.py  test_fork.py  test_fork_pool.py  test_fork_pool_worker_reset.py  test_langgraph_chat_model.py  test_langgraph_coalescer.py  test_pool.py  test_pr_review_demo.py  test_recorder.py  test_rewind.py  test_sglang_loader.py  test_sleep_mode.py  test_thaw_lint.py
tests/gpu/: test_sglang_a40.sh  test_vllm_a40.sh
tools/: thaw_lint.py
