[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thaw-vllm"
version = "0.3.1"
description = "Fast snapshot/restore for LLM inference. 17x faster cold starts, multi-GPU tensor parallel, KV cache snapshots. Supports vLLM and SGLang."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Nils Matteson"},
]
keywords = ["llm", "inference", "vllm", "sglang", "gpu", "cold-start", "kv-cache"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0",
]

[project.optional-dependencies]
native = ["thaw-native>=0.3.0"]
vllm = ["vllm>=0.18"]
sglang = ["sglang>=0.4,<0.6"]
serve = ["vllm>=0.18", "fastapi", "uvicorn"]
cloud = ["boto3>=1.26"]
test = ["pytest>=7.0", "httpx", "moto>=5.0"]
all = ["vllm>=0.18", "fastapi", "uvicorn", "thaw-native>=0.3.0", "boto3>=1.26"]

[project.scripts]
thaw = "thaw_vllm.cli:main"

[project.entry-points."vllm.general_plugins"]
thaw = "thaw_vllm.loader:register"

[project.urls]
Homepage = "https://github.com/thaw-ai/thaw"
Repository = "https://github.com/thaw-ai/thaw"

[tool.setuptools.packages.find]
where = ["python"]
include = ["thaw_common*", "thaw_vllm*", "thaw_sglang*"]

[tool.setuptools.package-dir]
"" = "python"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["python"]
