[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "thaw-native"
version = "0.1.2"
description = "Rust+CUDA native extension for thaw (pipelined DMA freeze/restore)"
requires-python = ">=3.8"

[tool.maturin]
manifest-path = "Cargo.toml"
module-name = "thaw"
features = ["pyo3/extension-module"]
